--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <p style="color:#8B4513;margin:1rem 0;font-size:1.1rem;">下午茶：LeTAO本店　｜　晚餐：世壺屋</p>
             <button class="big-btn" onclick="showDetail(2)">查看詳細時間軸</button></div>
         <div class="day"><h2>2月1日 (日) Day 3　定山溪溫泉放空</h2><button class="big-btn" onclick="showDetail(3)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月2日 (一) Day 4　盤溪滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月2日 (一) Day 4　藻岩山滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
         <div class="day"><h2>2月3日 (二) Day 5　盤溪滑雪場＋狸小路夜景</h2><button class="big-btn" onclick="showDetail(5)">查看詳細時間軸</button></div>
         <div class="day" style="border-left:16px solid var(--red);"><h2>2月4日 (三) Day 6　雪祭開幕日狂歡！</h2><button class="big-btn" style="background:var(--red);color:white;" onclick="showDetail(6)">立即查看</button></div>
         <div class="day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">查看詳細時間軸</button></div>
@@ -553,17 +553,17 @@ function showDetail(day){
         </div>`,
 
     4:`<div class="detail-day">
-            <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 4　盤溪滑雪場＋藻岩山夜景</h2>
+            <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 4　藻岩山滑雪場＋藻岩山夜景</h2>
             <div class="weather-box"><strong>2月2日天氣預報（長期平均）：</strong> 高溫 -3°C / 低溫 -9°C，晴間多雲</div>
-            <div class="snow-box"><strong>即時雪況預測：</strong> 盤溪滑雪場積雪深度 100 cm+（基於歷史長期平均）</div>
-        <img src="https://resources.matcha-jp.com/resize/720x2000/2018/06/02-55560.webp" class="hero-img" alt="藻岩山夜景">
-        <h2>Day 4　盤溪滑雪場＋藻岩山百萬夜景</h2>
-        <div class="step"><span class="time">08:30 – 16:00</span>　盤溪滑雪場</div>
-        <div class="step"><span class="time">19:00 – 21:30</span>　藻岩山纜車＋Mini纜車</div>
-        <a href="https://mt-moiwa.jp/" target="_blank" class="ticket-link">藻岩山纜車官方（英文）＋線上套票</a>
-        <a href="https://www.klook.com/zh-HK/activity/99611-mt-moiwa-ropeway/" target="_blank" class="ticket-link">Klook 藻岩山纜車票（常有折扣）</a>
-        <div class="links"><a href="https://www.google.com/maps/place/Mount+Moiwa+Ropeway" target="_blank" class="location-link">藻岩山路線</a></div>
-        </div>`,
+            <div class="snow-box"><strong>即時雪況預測：</strong> 藻岩山滑雪場積雪深度充足，適合初學者與夜滑（基於歷史長期平均）</div>
+            <img src="https://resources.matcha-jp.com/resize/720x2000/2018/06/02-55560.webp" class="hero-img" alt="藻岩山夜景">
+            <div class="step"><span class="time">09:00 – 16:00</span>　藻岩山滑雪場（市中心最近的滑雪場，適合半天玩）</div>
+            <div class="step"><span class="time">19:00 – 21:30</span>　藻岩山纜車＋Mini纜車賞百萬夜景</div>
+            <a href="https://sapporo-moiwa.jp/zh-TW/" target="_blank" class="ticket-link">藻岩山滑雪場官方網站（中文）</a>
+            <a href="https://mt-moiwa.jp/" target="_blank" class="ticket-link">藻岩山纜車官方（英文）＋線上套票</a>
+            <a href="https://www.klook.com/zh-HK/activity/99611-mt-moiwa-ropeway/" target="_blank" class="ticket-link">Klook 藻岩山纜車票（常有折扣）</a>
+            <div class="links"><a href="https://www.google.com/maps/place/Mount+Moiwa+Ropeway" target="_blank" class="location-link">藻岩山路線</a></div>
+            </div>`,
 
     5: `<div class="detail-day">
             <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 5　盤溪滑雪場＋狸小路夜景</h2>
